mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - name: mysql-storage             # 1
          persistentVolumeClaim:
            claimName: mysql-pv-claim     # 2
      containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:          
            - name: mysql-storage         # 3
              mountPath: /var/lib/mysql   # 4
