adminer-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: 8080
