mysql-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
